@@ -9,6 +9,9 @@ Add new items to top.
  PATCH: [ 1483553 ] Swedish MergeSwedish.rc 1.304 2.5.3.7 update
   Submitted by Hans Eriksson
   Src/Languages/Swedish: MergeSwedish.rc
+ PATCH: [ 1484004 ] Manual: new Open-dialog screenshot and small fixes
+  Docs/Users/Manual: Quick_start.xml
+  Docs/Users/Manual/screenshots: OpenDlg1.gif
 
 2006-05-08 Kimmo
  PATCH: [ 1483344 ] Fix creating private file filters
